--- a/Login/Base.lproj/Main.storyboard
+++ b/Login/Base.lproj/Main.storyboard
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +14,155 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Login" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ds6-MH-SKK" userLabel="ViewTop">
+                                <rect key="frame" x="0.0" y="20" width="320" height="284"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iphone_background" translatesAutoresizingMaskIntoConstraints="NO" id="CKe-p5-uA2">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient_background" translatesAutoresizingMaskIntoConstraints="NO" id="l0H-ly-qEh">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidthV">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColorV">
+                                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="CKe-p5-uA2" firstAttribute="top" secondItem="Ds6-MH-SKK" secondAttribute="top" id="1Xn-fX-4eV"/>
+                                    <constraint firstItem="l0H-ly-qEh" firstAttribute="top" secondItem="Ds6-MH-SKK" secondAttribute="top" id="N5b-Wz-ONf"/>
+                                    <constraint firstAttribute="trailing" secondItem="CKe-p5-uA2" secondAttribute="trailing" id="aRk-Ji-09c"/>
+                                    <constraint firstItem="CKe-p5-uA2" firstAttribute="leading" secondItem="Ds6-MH-SKK" secondAttribute="leading" id="cQS-Xb-IDv"/>
+                                    <constraint firstAttribute="trailing" secondItem="l0H-ly-qEh" secondAttribute="trailing" id="e4n-KR-NtK"/>
+                                    <constraint firstItem="CKe-p5-uA2" firstAttribute="height" secondItem="Ds6-MH-SKK" secondAttribute="height" multiplier="1:1" id="epE-lD-giQ"/>
+                                    <constraint firstItem="l0H-ly-qEh" firstAttribute="leading" secondItem="Ds6-MH-SKK" secondAttribute="leading" id="pIP-eq-PU5"/>
+                                    <constraint firstItem="l0H-ly-qEh" firstAttribute="height" secondItem="Ds6-MH-SKK" secondAttribute="height" id="vQm-Tv-KoR"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u9W-Fb-5ij">
+                                <rect key="frame" x="70" y="90" width="180" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Xi-QQ-PHP">
+                                <rect key="frame" x="70.5" y="140" width="180" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra8-cQ-VV5">
+                                <rect key="frame" x="115" y="190" width="90" height="30"/>
+                                <state key="normal" title="GO">
+                                    <color key="titleColor" red="1" green="0.0031556072115695999" blue="0.35678870082694591" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidthV">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColorV">
+                                        <color key="value" red="0.97680455450000003" green="0.0" blue="0.38364643358299971" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_down" translatesAutoresizingMaskIntoConstraints="NO" id="gAw-sq-SDt">
+                                <rect key="frame" x="140" y="284" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="ExR-xZ-AgF"/>
+                                    <constraint firstAttribute="height" constant="40" id="zPc-dl-DET"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85n-9i-ZRJ">
+                                <rect key="frame" x="115.5" y="496" width="89" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <state key="normal" title="Create an account"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1pn-zn-SWg">
+                                <rect key="frame" x="158" y="545" width="4" height="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C90-9r-mrU">
+                                <rect key="frame" x="130" y="540" width="30" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <state key="normal" title="About"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dbr-we-NuF">
+                                <rect key="frame" x="162" y="540" width="35" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <state key="normal" title="Contact"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32d-6L-G1Q" userLabel="ButtonTw">
+                                <rect key="frame" x="10" y="424" width="300" height="76"/>
+                                <state key="normal" image="login_twitter"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vD-32-8Zg" userLabel="ButtonFB">
+                                <rect key="frame" x="10" y="348" width="300" height="76"/>
+                                <state key="normal" image="login_facebook"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="u9W-Fb-5ij" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="2BC-qw-Ih2"/>
+                            <constraint firstItem="ra8-cQ-VV5" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="2G5-nG-Pae"/>
+                            <constraint firstItem="gAw-sq-SDt" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="64e-2f-3XT"/>
+                            <constraint firstItem="Ds6-MH-SKK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7hi-A3-h4K"/>
+                            <constraint firstItem="7Xi-QQ-PHP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9PX-D4-ryd"/>
+                            <constraint firstItem="gAw-sq-SDt" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="10" id="BdF-Fr-vh5"/>
+                            <constraint firstItem="7Xi-QQ-PHP" firstAttribute="top" secondItem="u9W-Fb-5ij" secondAttribute="bottom" constant="20" id="Bhj-Ki-C1f"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="C90-9r-mrU" secondAttribute="trailing" constant="20" symbolic="YES" id="IvL-Ml-3qO"/>
+                            <constraint firstItem="85n-9i-ZRJ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ph8-GM-hoB"/>
+                            <constraint firstItem="C90-9r-mrU" firstAttribute="leading" secondItem="1pn-zn-SWg" secondAttribute="leading" constant="-28" id="QXQ-wu-UGM"/>
+                            <constraint firstItem="Ds6-MH-SKK" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:2" id="RZ5-z8-Ybl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Dbr-we-NuF" secondAttribute="bottom" constant="5" id="VWN-pC-RIo"/>
+                            <constraint firstItem="85n-9i-ZRJ" firstAttribute="bottom" secondItem="32d-6L-G1Q" secondAttribute="bottom" constant="20" id="W2y-Xo-vvO"/>
+                            <constraint firstItem="Ds6-MH-SKK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Xa7-wL-c5n"/>
+                            <constraint firstItem="1pn-zn-SWg" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Y2S-BX-YcE"/>
+                            <constraint firstItem="0vD-32-8Zg" firstAttribute="top" secondItem="gAw-sq-SDt" secondAttribute="bottom" constant="24" id="Z3u-gV-dvX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u9W-Fb-5ij" secondAttribute="trailing" constant="70" id="ZPP-5k-kjt"/>
+                            <constraint firstItem="Ds6-MH-SKK" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="aKT-LB-kMC"/>
+                            <constraint firstItem="Dbr-we-NuF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1pn-zn-SWg" secondAttribute="leading" id="aUl-Vx-nal"/>
+                            <constraint firstItem="Ds6-MH-SKK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eJR-iE-9lV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1pn-zn-SWg" secondAttribute="bottom" constant="12" id="hLr-dO-s76"/>
+                            <constraint firstItem="7Xi-QQ-PHP" firstAttribute="width" secondItem="u9W-Fb-5ij" secondAttribute="width" id="hZg-Dp-91S"/>
+                            <constraint firstItem="0vD-32-8Zg" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="lML-Qf-bW9"/>
+                            <constraint firstItem="32d-6L-G1Q" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qKA-Og-f35"/>
+                            <constraint firstItem="u9W-Fb-5ij" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="uUS-yA-TvV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="C90-9r-mrU" secondAttribute="bottom" constant="5" id="wl8-wK-Zrc"/>
+                            <constraint firstItem="ra8-cQ-VV5" firstAttribute="width" secondItem="7Xi-QQ-PHP" secondAttribute="width" multiplier="1:2" id="x4Z-kH-NGM"/>
+                            <constraint firstItem="1pn-zn-SWg" firstAttribute="trailing" secondItem="Dbr-we-NuF" secondAttribute="trailing" constant="-35" id="xLa-bY-fpr"/>
+                            <constraint firstItem="ra8-cQ-VV5" firstAttribute="top" secondItem="7Xi-QQ-PHP" secondAttribute="bottom" constant="20" id="ye1-02-JeH"/>
+                            <constraint firstItem="32d-6L-G1Q" firstAttribute="top" secondItem="0vD-32-8Zg" secondAttribute="bottom" id="zFZ-eq-twg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="0.0" y="25.35211267605634"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gradient_background" width="1920" height="1080"/>
+        <image name="icon_down" width="2000" height="2000"/>
+        <image name="iphone_background" width="782" height="522"/>
+        <image name="login_facebook" width="300" height="76"/>
+        <image name="login_twitter" width="300" height="76"/>
+    </resources>
 </document>
